sevfruit-supplier-service: Изменен метод ShipmentController.add()
