# sevfruit-supplier-service/src/main/java/com/sevfruit/service/ShipmentController.java
@@ -1,5 +1,6 @@
 package com.sevfruit.service;
 
+import java.net.URI;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
@@ -10,7 +11,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
 import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
-import org.springframework.transaction.annotation.Transactional;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -18,11 +19,9 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ResponseStatusException;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
-import com.sevfruit.model.PriceProduct;
 import com.sevfruit.model.Shipment;
-import com.sevfruit.model.ShipmentProduct;
-import com.sevfruit.repo.ShipmentProductRepository;
 import com.sevfruit.repo.ShipmentRepository;
 
 /**
@@ -42,9 +41,6 @@ public class ShipmentController {
 
 	@Autowired
 	private ShipmentRepository shipmentRepository;
-	
-	@Autowired
-	private ShipmentProductRepository shipmentProductRepository;
 	
 	/**
 	 * Список всех поставок <br/>
@@ -80,29 +76,24 @@ public class ShipmentController {
 	
 	/**
 	 * Добавить новую поставку <br/>
-	 * {@code curl -w '\n' -D - -X POST -H "Api-Key: 12345" -H "Content-type: application/json" -d '{"price":3, "products": [{"priceProduct":{"product":4},"quantity":2.0}, {"priceProduct":{"product":1},"quantity":12.0}]}' http://localhost:8080/shipment }
+	 * {@code curl -w '\n' -D - -X POST -H "Api-Key: 12345" -H "Content-type: application/json" -d '{"price_id":3, "products": [{"priceProduct":{"product_id":4},"quantity":2.0}, {"priceProduct":{"product_id":1},"quantity":12.0}]}' http://localhost:8080/shipment }
 	 * @param shipment
 	 * @return
 	 */
 	@PostMapping("")
-	@Transactional
-	public Shipment add(@RequestBody Shipment shipment)
+	public ResponseEntity<Shipment> add(@RequestBody Shipment shipment)
 	{
 		try
 		{
 			final Shipment newShipment = shipmentRepository.save(shipment);
-			if (shipment.getProducts() != null)
-			{
-				shipment.getProducts().forEach(sp -> {
-					if (sp.getPriceProduct() != null)
-					{
-						shipmentProductRepository.save(new ShipmentProduct(newShipment, new PriceProduct(newShipment.getPrice_id(), sp.getPriceProduct().getProduct().getId()), sp.getQuantity()));
-					}
-				});
-			}
-			return newShipment;
+			
+			final URI location = ServletUriComponentsBuilder.fromCurrentRequestUri()
+					.pathSegment("{shipment_id}").buildAndExpand(newShipment.getId()).toUri();
+			
+			return ResponseEntity.created(location).body(newShipment);
 		} catch (Exception e)
 		{
+			logger.error("ShipmentController.add() failed: ", e);
 			throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, e.getMessage());
 		}
 	}
